Fixed warnings and bumped version of TestUtils.  No changes of substance.